# ArchiTheArchiver

./: .gitignore  README.md
App/: App.cpp  App.h  Archiver.cpp  Archiver.hpp  CMakeLists.txt  Compressor.cpp  Compressor.hpp  Parser.cpp  Parser.hpp  Utils.cpp  Utils.hpp
